# diplcode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindBotan2.cmake
examples/cpp_security/: Makefile  README.md  demo_config.toml  demo_instance.cpp  gen_certificate_chain.py  gen_instances.sh  liblcm.so.1  listener.cpp  run.sh  run_test.py  send_message.cpp  template_instance.toml
examples/cpp_security/instances/: alice.toml  bob.toml  charlie.toml  daniel.toml  join.toml
examples/cpp_security/x509v3/: alice.crt  alice.key  bob.crt  bob.key  charlie.crt  charlie.key  daniel.crt  daniel.key  join.crt  join.key  root_ca.crt  root_ca.key
lcm/: CMakeLists.txt  crypto_wrapper.cpp  crypto_wrapper.h  lcm-cpp-impl.hpp  lcm-cpp.hpp  lcm.c  lcm.h  lcm_file.c  lcm_internal.h  lcm_memq.c  lcm_mpudpm.c  lcm_tcpq.c  lcm_udpm.c  udpm_util.c  udpm_util.h
lcm-python/: pylcm.c
lcm/lcmsec/: crypto_wrapper.cpp  crypto_wrapper.h  dsa.cpp  dsa.h  eventloop.hpp  gkexchg.cpp  gkexchg.h  lcmexcept.hpp  lcmsec_stubs.cpp  lcmsec_util.h  managed_state.cpp  managed_state.hpp  protocol_uid.cpp  protocol_uid.hpp  ra.hpp  state.hpp  tracy_stubs.hpp
lcm/lcmsec/lcmtypes/: Attestation_Evidence.hpp  Attestation_Evidence_Static.hpp  Attestation_Request_Static.hpp  Dutta_Barua_JOIN.hpp  Dutta_Barua_JOIN_response.hpp  Dutta_Barua_SYN.hpp  Dutta_Barua_cert.hpp  Dutta_Barua_message.hpp  dutta_barua.lcm
test/: lcmsec_run_client_server_test.py
test/c/: CMakeLists.txt  lcmsec_client.cpp  lcmsec_common.c  lcmsec_common.h  lcmsec_server.c
